# reseller-cashback

./: .coveragerc  .dockerignore  .editorconfig  .env.docker  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  deployment-tasks.sh  docker-compose.yaml  heroku.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: integration-pipeline.yaml
docs/: index.md  requirements.md
docs/setup/: configuracoes.md  environment.md  pre-requisitos.md  testes.md
make-lib/: checks.mk  environment.mk  integrations.mk  servers.mk  tests.mk  utils.mk
reseller_cashback/: manage.py
reseller_cashback/auth/: apps.py  payload.py
reseller_cashback/auth/_tests/: conftest.py  test_integration_auth.py  test_unit_jwt_payload.py
reseller_cashback/authentication/: apps.py  urls.py  views.py
reseller_cashback/core/: admin.py  apps.py  serializers.py  urls.py  utils.py  views.py
reseller_cashback/core/_tests/: conftest.py  test_integration_views_cashback_reseller.py  test_integration_views_reseller.py  test_integration_views_sales_order.py  test_unit_admin.py  test_unit_core_models.py  test_unit_core_serializer_reseller.py  test_unit_core_serializer_sales_order.py  test_unit_core_site_domain.py
reseller_cashback/core/migrations/: 0001_initial.py  0002_salesordermodel.py
reseller_cashback/core/models/: __init__.py  basemodel.py  reseller.py  sales_order.py
reseller_cashback/core/serializers/: __init__.py  base.py  reseller.py  sales_order.py
reseller_cashback/core/views/: __init__.py  (+4 more)
reseller_cashback/reseller_cashback/: asgi.py  urls.py  wsgi.py
(+4 files in other folders)
